Adding CORS support for fonts
Adding CORS access control headers for font related file extensions
including over https

--- a/nginx/templates/default/site.erb
+++ b/nginx/templates/default/site.erb
@@ -25,6 +25,11 @@ server {
     deny all;
   }
   
+  location ~* \.(eot|otf|ttf|woff)$ {
+    add_header Access-Control-Allow-Origin *;
+  }
+
+  
 }
 
 <% if @application[:ssl_support] %>
@@ -54,5 +59,10 @@ server {
   if ($request_uri ~* ^.*\.git.*$) {
      return 404;
   }
+  
+  location ~* \.(eot|otf|ttf|woff)$ {
+    add_header Access-Control-Allow-Origin *;
+  }
+
 }
 <% end %>
