--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -88,10 +88,14 @@ server {
     client_max_body_size <%= @application[:nginx][:client_max_body_size] %>;
   <% end %>
 
+  location ~* \.(eot|otf|ttf|woff|svg)$ {
+    add_header Access-Control-Allow-Origin *;
+  }
+
   location / {
     try_files $uri/index.html $uri/index.htm @unicorn;
   }
-
+  
   location @unicorn {
     proxy_set_header X-Forwarded-Proto https;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
