--- a/nginx/templates/default/nginx.conf.erb
+++ b/nginx/templates/default/nginx.conf.erb
@@ -11,6 +11,13 @@ events {
 http {
   include       <%= node[:nginx][:dir] %>/mime.types;
   default_type  application/octet-stream;
+  
+  <% node[:nginx][:limit_req].each do |name, size, rate| %>
+  limit_req_zone $binary_remote_addr zone=<%= name %>:<%= size %> rate=<%= rate %>; 
+  <% end %>
+  <% if node[:nginx][:limit_req_status] %>
+  limit_req_status <%= node[:nginx][:limit_req_status] %>;
+  <& end %>
 
   <% node[:nginx][:log_format].each do |name, format| %>
   log_format <%= name %> <%= format %>;
