--- a/nginx/templates/default/nginx.conf.erb
+++ b/nginx/templates/default/nginx.conf.erb
@@ -17,7 +17,7 @@ http {
   <% end %>
   <% if node[:nginx][:limit_req_status] %>
   limit_req_status <%= node[:nginx][:limit_req_status] %>;
-  <& end %>
+  <% end %>
 
   <% node[:nginx][:log_format].each do |name, format| %>
   log_format <%= name %> <%= format %>;
