--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -33,6 +33,20 @@ server {
   location / {
     try_files $uri/index.html $uri/index.htm @unicorn;
   }
+  
+  <% node[:nginx][:limit_req].each do do |name, location| %>
+  location <%= location %> {
+    #apply rate limiting
+	limit_req zone=<%= name %>;
+    try_files $uri/index.html $uri/index.htm @unicorn;
+  }
+  <% end %>
+  
+  <% node[:nginx][proxy_pass].each do |proxy, location| %>
+  location <%= location %> {
+    proxy_pass <%= proxy %>
+  }
+  <% end %>
 
   location @unicorn {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
