fixing changes to config for unicorn site - again

--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -34,10 +34,10 @@ server {
     try_files $uri/index.html $uri/index.htm @unicorn;
   }
   
-  <% node[:nginx][:limit_req].each do |name, location| %>
+  <% node[:nginx][:limit_req].each do |name, location, options| %>
   location <%= location %> {
     #apply rate limiting
-	limit_req zone=<%= name %>;
+    limit_req zone=<%= name %> <%= options %>;
     try_files $uri/index.html $uri/index.htm @unicorn;
   }
   <% end %>
