fixing changes to config for unicorn site - again - last time

--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -110,7 +110,7 @@ server {
     try_files $uri/index.html $uri/index.htm @unicorn;
   }
   
-  <% node[:nginx][:limit_req].each do do |name, location| %>
+  <% node[:nginx][:limit_req].each do |name, location| %>
   location <%= location %> {
     #apply rate limiting
 	limit_req zone=<%= name %>;
