fixing changes to config for unicorn site

--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -118,7 +118,7 @@ server {
   }
   <% end %>
   
-  <% node[:nginx][proxy_pass].each do |proxy, location| %>
+  <% node[:nginx][:proxy_pass].each do |proxy, location| %>
   location <%= location %> {
     proxy_pass <%= proxy %>
   }
