--- a/nginx/templates/default/nginx.conf.erb
+++ b/nginx/templates/default/nginx.conf.erb
@@ -13,7 +13,7 @@ http {
   default_type  application/octet-stream;
   
   <% node[:nginx][:limit_req].each do |limit| %>
-  limit_req_zone $binary_remote_addr zone=<%= limit.name %>:<%= limit.size %> rate=<%= limit.rate %>; 
+  limit_req_zone $binary_remote_addr zone=<%= limit.name %>:<%= limit.buffer %> rate=<%= limit.rate %>; 
   <% end %>
   <% if node[:nginx][:limit_req_status] %>
   limit_req_status <%= node[:nginx][:limit_req_status] %>;
