missed a semi colon

--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -44,7 +44,7 @@ server {
   
   <% node[:nginx][:proxy_pass].each do |proxy| %>
   location <%= proxy.location %> {
-    proxy_pass <%= proxy.proxy %>
+    proxy_pass <%= proxy.proxy %>;
   }
   <% end %>
 
