fixing configs for missing elements

--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -31,7 +31,7 @@ server {
   }
   
   location / {
-    try_files $uri/index.html $uri/index.htm @unicorn;
+    try_files $uri/index.html $uri/index.htm @unicorn; 
   }
   <% if node[:nginx][:limit_req] %>
     <% node[:nginx][:limit_req].each do |limit| %>
@@ -39,7 +39,7 @@ server {
     #apply rate limiting
     limit_req zone=<%= limit.name %> <%= limit.options %>;
     try_files $uri/index.html $uri/index.htm @unicorn;
-  }
+  } 
     <% end %>
   <% end %>
   
@@ -113,18 +113,22 @@ server {
     try_files $uri/index.html $uri/index.htm @unicorn;
   }
   
-  <% node[:nginx][:limit_req].each do |limit| %>
+  <% if node[:nginx][:limit_req] %>
+    <% node[:nginx][:limit_req].each do |limit| %>
   location <%= limit.location %> {
     #apply rate limiting
     limit_req zone=<%= limit.name %> <%= limit.options %>;
     try_files $uri/index.html $uri/index.htm @unicorn;
-  }
+  } 
+    <% end %>
   <% end %>
   
-  <% node[:nginx][:proxy_pass].each do |proxy| %>
+  <% node[:nginx][:proxy_pass] %>
+    <% node[:nginx][:proxy_pass].each do |proxy| %>
   location <%= proxy.location %> {
     proxy_pass <%= proxy.proxy %>;
   }
+    <% end %>
   <% end %>
   
   location @unicorn {
