--- a/munin/templates/default/munin-node.conf.erb
+++ b/munin/templates/default/munin-node.conf.erb
@@ -1,13 +1,13 @@
 host *
 port <%= node["munin"]["port"] %>
-host_name = <%= node["munin"]["host_name"] %>
+host_name = '<%= node["munin"]["host_name"] %>'
 
 <% node["munin"]["cidr_allow"].each do |cidr| %>
 cidr_allow <%= cidr %>
 <% end %>
 
 <% node["munin"]["allow"].each do |allow| %>
-allow <%= allow %>
+allow '<%= allow %>'
 <% end %>
 
 user       root
