--- a/munin/templates/default/munin-master.conf.erb
+++ b/munin/templates/default/munin-master.conf.erb
@@ -95,9 +95,9 @@ includedir /etc/munin/munin-conf.d
 #contact.nagios.command /usr/bin/send_nsca nagios.host.comm -c /etc/nsca.conf
 
 # a simple host tree
-[localhost.localdomain]
-    address 127.0.0.1
-    use_node_name yes
+#[localhost.localdomain]
+#    address 127.0.0.1
+#    use_node_name yes
 
 <% node["munin-master"]["nodes"].each do |munin-node| %>
 <%= "[#{munin-node.name}]" %>
