--- a/munin/templates/default/munin-nginx.conf.erb
+++ b/munin/templates/default/munin-nginx.conf.erb
@@ -1,11 +1,11 @@
 server {
-  listen   80;
-  server_name  127.0.0.1;
+  listen   <%= @port %>;
+  server_name  <%= @hostname %>
 
   access_log  /var/log/nginx/munin.access.log;
 
   location / {
-    root   /var/cache/munin/www;
+    root   <%= @html_dir %>;
     index  index.html index.htm;
   }
 }
