reverting to cron based - CGI is hard!

--- a/munin/templates/default/munin-nginx.conf.erb
+++ b/munin/templates/default/munin-nginx.conf.erb
@@ -1,6 +1,9 @@
 server {
   listen   <%= @port %>;
   server_name  <%= @hostname %>
+  
+  auth_basic            "Private access";
+  auth_basic_user_file  /etc/munin/htpasswd;
 
   access_log  /var/log/nginx/munin.access.log;
 
