--- a/awslogs/templates/default/cwlogs.cfg.erb
+++ b/awslogs/templates/default/cwlogs.cfg.erb
@@ -37,6 +37,7 @@ state_file = /var/awslogs/state/agent-state
 #<% end -%>
 
 #test for nginx access log log file
+<% Chef::Log.info("/var/log/nginx/#{node["opsworks"]["applications"][0]["slug_name"]}.access.log") %>
 <% if File.exist?("/var/log/nginx/#{node["opsworks"]["applications"][0]["slug_name"]}.access.log") -%>
   [<%= node[:opsworks][:stack][:name] %>_nginx_access]
   datetime_format = [%Y/%m/%d %H:%M:%S]
@@ -46,6 +47,7 @@ state_file = /var/awslogs/state/agent-state
 <% end -%>
 
 #test for Rails log file
+<% Chef::Log.info("/srv/www/#{node["opsworks"]["applications"][0]["slug_name"]}/shared/logs/#{node["deploy"][node["opsworks"]["applications"][0]["slug_name"]]["rails_env"]}.log") %>
 <% if File.exist?("/srv/www/#{node["opsworks"]["applications"][0]["slug_name"]}/shared/logs/#{node["deploy"][node["opsworks"]["applications"][0]["slug_name"]]["rails_env"]}.log") -%>
   [<%= node[:opsworks][:stack][:name] %>_rails]
   datetime_format = [%Y-%m-%dT%H:%M:%S]
@@ -55,6 +57,7 @@ state_file = /var/awslogs/state/agent-state
 <% end -%>
 
 #test for sidekiq log file
+<% Chef::Log.info("/srv/www/#{node["opsworks"]["applications"][0]["slug_name"]}/shared/logs/sidekiq.log") %>
 <% if File.exist?("/srv/www/#{node["opsworks"]["applications"][0]["slug_name"]}/shared/logs/sidekiq.log") -%>
   [<%= node[:opsworks][:stack][:name] %>_sidekiq]
   datetime_format = [%Y-%m-%dT%H:%M:%S]
@@ -64,6 +67,7 @@ state_file = /var/awslogs/state/agent-state
 <% end -%>
 
 #test for auth log file
+<% Chef::Log.info('/var/log/auth.log') %>
 <% if File.exist?('/var/log/auth.log') -%>
   [<%= node[:opsworks][:stack][:name] %>_auth]
   datetime_format = %b %d %H:%M:%S
