--- a/awslogs/templates/default/cwlogs.cfg.erb
+++ b/awslogs/templates/default/cwlogs.cfg.erb
@@ -46,13 +46,13 @@ log_stream_name = <%= node[:opsworks][:instance][:hostname] %>_nginx_access
 datetime_format = [%Y/%m/%d %H:%M:%S]
 <% end -%>
 
-#test for Nginx log file with log_format
-<% if File.exist?("/var/log/nginx/#{node["opsworks"]["applications"][0]["slug_name"]}.#{node["opsworks"]["applications"][0]["log_format"]}.access.log") -%>
+#test for Nginx log file with log_format <%= node["deploy"][node["opsworks"]["applications"][0]["slug_name"]]["log_format"] %>
+<% if File.exist?("/var/log/nginx/#{node["opsworks"]["applications"][0]["slug_name"]}.#{node["deploy"][node["opsworks"]["applications"][0]["slug_name"]]["log_format"]}.access.log") -%>
 <% Chef::Log.info("Found Nginx access log with log format") %>
-[<%= node[:opsworks][:stack][:name] %>_nginx_<%= node["opsworks"]["applications"][0]["log_format"] %>]
-file = <%= "/var/log/nginx/#{node["opsworks"]["applications"][0]["slug_name"]}.#{node["opsworks"]["application"][0]["log_format"]}.access.log" %>
+[<%= node[:opsworks][:stack][:name] %>_nginx_<%= node["deploy"][node["opsworks"]["applications"][0]["slug_name"]]["log_format"] %>]
+file = <%= "/var/log/nginx/#{node["opsworks"]["applications"][0]["slug_name"]}.#{node["deploy"][node["opsworks"]["applications"][0]["slug_name"]]["log_format"]}.access.log" %>
 log_group_name = <%= node[:opsworks][:stack][:name].gsub(' ','_') %>
-log_stream_name = <%= node[:opsworks][:instance][:hostname] %>_nginx_access
+log_stream_name = <%= node[:opsworks][:instance][:hostname] %>_nginx_<%= node["deploy"][node["opsworks"]["applications"][0]["slug_name"]]["log_format"] %>
 datetime_format = [%Y/%m/%d %H:%M:%S]
 <% end -%>
 
