--- a/awslogs/templates/default/cwlogs.cfg.erb
+++ b/awslogs/templates/default/cwlogs.cfg.erb
@@ -46,8 +46,7 @@ log_stream_name = <%= node[:opsworks][:instance][:hostname] %>_nginx_access
 datetime_format = [%Y/%m/%d %H:%M:%S]
 <% end -%>
 
-#test for Nginx log file with log_format
-<%= "/var/log/nginx/#{node["opsworks"]["applications"][0]["slug_name"]}.access.#{node["deploy"][node["opsworks"]["applications"][0]["slug_name"]]["log_format"][0]}.log" %>
+#test for Nginx log file with log_format <%= "/var/log/nginx/#{node["opsworks"]["applications"][0]["slug_name"]}.access.#{node["deploy"][node["opsworks"]["applications"][0]["slug_name"]]["log_format"][0]}.log" %>
 <% if File.exist?("/var/log/nginx/#{node["opsworks"]["applications"][0]["slug_name"]}.access.#{node["deploy"][node["opsworks"]["applications"][0]["slug_name"]]["log_format"][0]}.log") -%>
 <% Chef::Log.info("Found Nginx access log with log format") %>
 [<%= node[:opsworks][:stack][:name] %>_nginx_<%= node["deploy"][node["opsworks"]["applications"][0]["slug_name"]]["log_format"][0] %>]
