--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -26,12 +26,13 @@ server {
     client_max_body_size <%= @application[:nginx][:client_max_body_size] %>;
   <% end %>
 
-  location ~* \.(eot|otf|ttf|woff|svg)$ {
-    add_header Access-Control-Allow-Origin *;
-  }
-  
   location / {
     try_files $uri/index.html $uri/index.htm @unicorn;
+  }
+
+  location ~* \.(eot|otf|ttf|woff|svg)$ {
+    add_header Access-Control-Allow-Origin *;
+    try_files $uri @unicorn;
   }
 
   location @unicorn {
@@ -71,7 +72,7 @@ server {
 server {
   listen   443;
   server_name <%= @application[:domains].join(" ") %> <%= node[:hostname] %>;
-  
+
   <% if @application[:log_format] %>
     <% @application[:log_format].each do |log_format_name| %>
   access_log <%= node[:nginx][:log_dir] %>/<%= @application[:domains].first %>.access.<%= log_format_name %>.log <%= log_format_name %>;
@@ -79,9 +80,9 @@ server {
   <% else %>
   access_log <%= node[:nginx][:log_dir] %>/<%= @application[:domains].first %>-ssl.access.log;
   <%end %>
-  
-  
-  
+
+
+
   ssl on;
   ssl_certificate /etc/nginx/ssl/<%= @application[:domains].first %>.crt;
   ssl_certificate_key /etc/nginx/ssl/<%= @application[:domains].first %>.key;
@@ -97,14 +98,15 @@ server {
     client_max_body_size <%= @application[:nginx][:client_max_body_size] %>;
   <% end %>
 
-  location ~* \.(eot|otf|ttf|woff|svg)$ {
-    add_header Access-Control-Allow-Origin *;
-  }
-
   location / {
     try_files $uri/index.html $uri/index.htm @unicorn;
   }
-  
+
+  location ~* \.(eot|otf|ttf|woff|svg)$ {
+    add_header Access-Control-Allow-Origin *;
+    try_files $uri @unicorn;
+  }
+
   location @unicorn {
     proxy_set_header X-Forwarded-Proto https;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
