--- a/opsworks_dotenv/templates/default/dotenv.erb
+++ b/opsworks_dotenv/templates/default/dotenv.erb
@@ -4,10 +4,10 @@
 @Email:  ted.moyses@corporaterewards.co.uk
 @Filename: dotenv.erb
 @Last modified by:   Ted Moyses
-@Last modified time: 2017-10-18T01:48:09+01:00
+@Last modified time: 2017-10-18T02:54:50+01:00
 -->
 
 
 <% @vars.each do |key, value| %>
-<%=key%>=<%value%>
+<%=key%>=<%=value%>
 <% end %>
