--- a/awslogs/templates/default/cwlogs.cfg.erb
+++ b/awslogs/templates/default/cwlogs.cfg.erb
@@ -93,6 +93,6 @@ state_file = /var/awslogs/state/agent-state
 file = <%= stream.path %>
 log_group_name = <%= node[:opsworks][:stack][:name].gsub(' ','_') %>
 log_stream_name = <%= node[:opsworks][:instance][:hostname] %>_<%= stream.name%>
-datetime_format = <%= stream.datetime_format
+datetime_format = <%= stream.datetime_format %>
 <% end %>
 <% end %>
