--- a/awslogs/templates/default/cwlogs.cfg.erb
+++ b/awslogs/templates/default/cwlogs.cfg.erb
@@ -29,12 +29,12 @@ state_file = /var/awslogs/state/agent-state
 
 
 <% @streams.each do |stream| -%>
-<% if File.exist?(stream.path) %>
-<% Chef::Log.info("Found #{stream.name}") %>
-[<%= node[:opsworks][:stack][:name] %>_<%= stream.name%>]
-file = <%= stream.path %>
+<% if File.exist?(stream['path']) %>
+<% Chef::Log.info("Found #{stream['name']}") %>
+[<%= node[:opsworks][:stack][:name] %>_<%= stream['name'] %>]
+file = <%= stream['path'] %>
 log_group_name = <%= node[:opsworks][:stack][:name].gsub(' ','_') %>
-log_stream_name = <%= node[:opsworks][:instance][:hostname] %>_<%= stream.name%>
-datetime_format = <%= stream.datetime_format %>
+log_stream_name = <%= node[:opsworks][:instance][:hostname] %>_<%= stream['name'] %>
+datetime_format = <%= stream['datetime_format'] %>
 <% end %>
 <% end %>
