fails to find streams properly

--- a/awslogs/templates/default/cwlogs.cfg.erb
+++ b/awslogs/templates/default/cwlogs.cfg.erb
@@ -29,6 +29,7 @@ state_file = /var/awslogs/state/agent-state
 
 
 <% @streams.each do |stream| -%>
+<% Chef::Log.info("Trying #{stream['name']}") %>
 <% if File.exist?(stream['path']) %>
 <% Chef::Log.info("Found #{stream['name']}") %>
 [<%= node[:opsworks][:stack][:name] %>_<%= stream['name'] %>]
