adding path to log

--- a/awslogs/templates/default/cwlogs.cfg.erb
+++ b/awslogs/templates/default/cwlogs.cfg.erb
@@ -29,7 +29,7 @@ state_file = /var/awslogs/state/agent-state
 
 
 <% @streams.each do |key, stream| -%>
-<% Chef::Log.info("Trying #{stream[:name]}") %>
+<% Chef::Log.info("Trying #{stream[:name]} (#{stream[:path]})") %>
 <% if File.exist?(stream[:path]) %>
 <% Chef::Log.info("Found #{stream[:name]}") %>
 [<%= node[:opsworks][:stack][:name] %>_<%= stream[:name] %>]
