--- a/codeigniter/templates/default/db.erb
+++ b/codeigniter/templates/default/db.erb
@@ -6,10 +6,10 @@ $query_builder = TRUE;
 
 $db['default'] = array(
         'dsn'   => '',
-        'hostname' => getenv('DB_HOST') || '<%= @database[:host]%>',
-        'username' => getenv('DB_USER') || '<%= @database[:username]%>',
-        'password' => getenv('DB_PASS') || '<%= @database[:password]%>',
-        'database' => getenv('DB_NAME') || '<%= @database[:database]%>',
+        'hostname' => getenv('DB_HOST') ? getenv('DB_HOST') : '<%= @database[:host]%>',
+        'username' => getenv('DB_USER') ? getenv('DB_USER') : '<%= @database[:username]%>',
+        'password' => getenv('DB_PASS') ? getenv('DB_PASS') : '<%= @database[:password]%>',
+        'database' => getenv('DB_NAME') ? getenv('DB_NAME') : '<%= @database[:database]%>',
         'dbdriver' => 'mysqli',
         'dbprefix' => '',
         'pconnect' => FALSE,
