--- a/codeigniter/templates/default/config.erb
+++ b/codeigniter/templates/default/config.erb
@@ -217,7 +217,7 @@ $config['log_threshold'] = <%= @config[:log_threshold] %>;
 | application/logs/ directory. Use a full server path with trailing slash.
 |
 */
-$config['log_path'] = '<%= @config[:log_path]%>';
+$config['log_path'] = '<%= "#{@config[:log_path]}/#{@app}"%>';
 
 /*
 |--------------------------------------------------------------------------
@@ -276,7 +276,7 @@ $config['error_views_path'] = '';
 | application/cache/ directory.  Use a full server path with trailing slash.
 |
 */
-$config['cache_path'] = '<%= @config[:cache_path]%>';
+$config['cache_path'] = '<%= "#{@config[:cache_path]}/#{@app}"%>';
 
 /*
 |--------------------------------------------------------------------------
@@ -360,7 +360,7 @@ $config['encryption_key'] = '';
 $config['sess_driver'] = '<%= @config[:sess_driver] %>';
 $config['sess_cookie_name'] = 'ci_session';
 $config['sess_expiration'] = 7200;
-$config['sess_save_path'] = '<%= @config[:sess_save_path] %>';
+$config['sess_save_path'] = '<%= "#{@config[:sess_save_path]}/#{@app}" %>';
 $config['sess_match_ip'] = FALSE;
 $config['sess_time_to_update'] = 300;
 $config['sess_regenerate_destroy'] = FALSE;
