--- a/codeigniter/templates/default/config.erb
+++ b/codeigniter/templates/default/config.erb
@@ -217,7 +217,7 @@ $config['log_threshold'] = <%= @config[:log_threshold] %>;
 | application/logs/ directory. Use a full server path with trailing slash.
 |
 */
-$config['log_path'] = '<%= "#{@config[:log_path]}/#{@app}"%>';
+$config['log_path'] = '<%= @config[:log_path] %>';
 
 /*
 |--------------------------------------------------------------------------
@@ -276,7 +276,7 @@ $config['error_views_path'] = '';
 | application/cache/ directory.  Use a full server path with trailing slash.
 |
 */
-$config['cache_path'] = '<%= "#{@config[:cache_path]}/#{@app}"%>';
+$config['cache_path'] = '<%= "#{@config[:cache_path]}/#{@app}" %>';_save_path
 
 /*
 |--------------------------------------------------------------------------
