fixed erroneous text in config

--- a/codeigniter/templates/default/config.erb
+++ b/codeigniter/templates/default/config.erb
@@ -276,7 +276,7 @@ $config['error_views_path'] = '';
 | application/cache/ directory.  Use a full server path with trailing slash.
 |
 */
-$config['cache_path'] = '<%= "#{@config[:cache_path]}/#{@app}" %>';_save_path
+$config['cache_path'] = '<%= "#{@config[:cache_path]}/#{@app}" %>';
 
 /*
 |--------------------------------------------------------------------------
