make per app stream config work for multi app stacks with relative paths

--- a/awslogs/templates/default/cwlogs.cfg.erb
+++ b/awslogs/templates/default/cwlogs.cfg.erb
@@ -29,15 +29,15 @@ state_file = /var/awslogs/state/agent-state
 
 <% @streams.each do |key, stream| -%>
 #if a path is not an absolute path the code below assumes is it relative to :deploy_to from the configure recipe
-<% file_path = stream[:path][0] == '/' ? stream[:path] : "#{@deploy_to}/#{stream[:path]}" %>
-<% Chef::Log.info("#{stream[:name]} (#{file_path})") %>
-<% if File.exist?(file_path) %>
-<% Chef::Log.info("Found #{stream[:name]}") %>
-[<%= node[:opsworks][:stack][:name].gsub(/[\(\)]/, '') %>_<%= stream[:name] %>]
+<% file_path = stream["path"][0] == '/' ? stream["path"] : "#{stream["deploy_to"]}/#{stream["path"]}" %>
+<% Chef::Log.info("#{stream["name"]} (#{file_path})") %>
+<% if File.exist?(file_path) || file_path =~ /\*/ %>
+<% Chef::Log.info("Found #{stream["name"]}") %>
+[<%= node[:opsworks][:stack][:name].gsub(/[\(\)]/, '') %>_<%= stream["name"] %>]
 file = <%= file_path %>
-log_group_name = <%= node[:opsworks][:stack][:name].gsub(/[\(\) ]/,'_') %><%= @application != "" ? "_#{@application}" : "" %>
-log_stream_name = <%= node[:opsworks][:instance][:hostname] %>_<%= stream[:name] %>
-datetime_format = <%= stream[:datetime_format] %>
+log_group_name = <%= node[:opsworks][:stack][:name].gsub(/[\(\) ]/,'_') %><%= stream["application"] != "" ? "_#{stream["application"]}" : "" %>
+log_stream_name = <%= node[:opsworks][:instance][:hostname] %>_<%= stream["name"] %>
+datetime_format = <%= stream["datetime_format"] %>
 
 <% end %>
 <% end %>
