--- a/codeigniter/templates/default/config.erb
+++ b/codeigniter/templates/default/config.erb
@@ -19,7 +19,7 @@ defined('BASEPATH') OR exit('No direct script access allowed');
 */
 <%
 # grab the first listed domain to be the default domain according to CodeIgniter
-protocol = node[:deploy][@app][:ssl_support] ? 'http://' : 'https://'
+protocol = node[:deploy][@app][:ssl_support] ? 'https://' : 'http://'
 %>
 $config['base_url'] = '<%= "#{protocol}#{node[:deploy][@app][:domains][0]}" -%>';
 
