--- a/codeigniter/templates/default/config.erb
+++ b/codeigniter/templates/default/config.erb
@@ -1,3 +1,10 @@
+<!--
+@Date:   2018-02-26T10:34:12+00:00
+@Last modified time: 2018-06-13T17:01:56+01:00
+-->
+
+
+
 <?php
 defined('BASEPATH') OR exit('No direct script access allowed');
 
@@ -511,3 +518,7 @@ $config['rewrite_short_tags'] = FALSE;
 | Array:                array('10.0.1.200', '192.168.5.0/24')
 */
 $config['proxy_ips'] = '';
+
+
+//extra config
+include 'config_extra.php';
