--- a/nuance_cron/templates/default/test.erb
+++ b/nuance_cron/templates/default/test.erb
@@ -1,1 +1,6 @@
+#!/bin/bash
+# Version: 1.4.3
+MAILTO=""
+PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+
 2 * * * * deploy echo 'Testing' > /temp/test.txt 2>&1
