--- a/opsworks_delayed_job/templates/default/start.sh.erb
+++ b/opsworks_delayed_job/templates/default/start.sh.erb
@@ -4,4 +4,10 @@ export RAILS_ENV="<%= @rails_env %>"
 export RACK_ENV="<%= @rails_env %>"
 export PATH=/usr/local/bin:/usr/local/sbin:/opt/aws/bin:$PATH
 
+# env vars from opsworks here
+# <%= @vars.length %>
+<% @vars.each do |key, value| %>
+export <%= key %>="<%= value %>"
+<% end %>
+
 su <%= @user %> -s /bin/bash -c 'cd <%= @rails_root %> && bundle exec bin/delayed_job start'
